--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,5 +21,13 @@ pipeline {
                 echo 'Deploying....'
             }
         }
+        stage('Build'){
+            steps {
+                dir (‘maven-adderapp’) {
+                    sh 'mvn -DskipTests clean package'
+                }
+            }
+        }
+        
     }
 }
