--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
         } 
    }
     post {
-         sucess {
+         success {
              dir (‘maven-adderapp’) {
                  archiveArtifacts artifacts: 'target/*.jar', fingerprint:true
                 }
